--- a/forecasts/Dockerfile.dev
+++ b/forecasts/Dockerfile.dev
@@ -1,5 +1,7 @@
 FROM ruby:2.7.2-slim
 
+ARG OPEN_WEATHER_API_KEY
+ENV OPEN_WEATHER_API_KEY=${OPEN_WEATHER_API_KEY}
 RUN apt-get update -qq && apt-get install -y build-essential libpq-dev
 RUN mkdir /project
 WORKDIR /project
