--- a/forecasts/Gemfile
+++ b/forecasts/Gemfile
@@ -17,10 +17,8 @@ gem 'puma', '~> 4.1'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.2', require: false
 gem 'faraday', '~> 2.2.0'
-gem 'faraday-http-cache'
+gem 'faraday-http-cache', '~> 2.2.0'
 
-gem 'vcr', '~> 5.0'
-gem 'webmock', '~> 3.7', '>= 3.7.6'
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 # gem 'rack-cors'
@@ -30,6 +28,8 @@ group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
   gem 'factory_bot_rails', '~> 5.1.0'
   gem 'rspec-rails', '~> 3.8.2'
+  gem 'vcr', '~> 5.0'
+  gem 'webmock', '~> 3.7', '>= 3.7.6'
 end
 
 group :development do
